RESOLVED FIXED167887
REGRESSION(r210740): [GTK] 2.15 broke embedded videos in GNOME's yelp app
https://bugs.webkit.org/show_bug.cgi?id=167887
Summary REGRESSION(r210740): [GTK] 2.15 broke embedded videos in GNOME's yelp app
Jeremy Bicha
Reported 2017-02-06 09:40:44 PST
Originally reported at https://bugzilla.gnome.org/778240 but reporting here now since it may be an unintentional WebKit regression. Ubuntu GNOME 17.04 Alpha yelp 3.22.0-1ubuntu1 webkit2gtk 2.15.4-1ubuntu1 yelp is GNOME's help app for viewing user documention. The embedded videos provided by gnome-getting-started-docs don't work with webkit 2.15.4 More specifically, I see the subtitles and the play menubar with the slider and the timestamp/time remaining but the video content is solid black. And if I let the video play to the end, clicking the X or pressing the Esc key to close the video player does nothing. And sometimes, the video doesn't play at all (no slider, no subtitles). I tried rebuilding yelp against webkit 2.15 but that didn't make a difference.
Attachments
Patch (3.20 KB, patch)
2017-02-07 06:13 PST, Carlos Garcia Campos
mcatanzaro: review+
Carlos Garcia Campos
Comment 1 2017-02-07 04:31:19 PST
This was broken by r210740. When the video sink is created, the media player doesn't have a renderer yet, and accelerated compositing is not available in that moment. When the video starts playing we have Ac available but we cached the value, so we end up mixing the drawing models.
Carlos Garcia Campos
Comment 2 2017-02-07 04:34:15 PST
Note also that the accelerated compositing setting can change too.
Carlos Garcia Campos
Comment 3 2017-02-07 06:13:01 PST
Michael Catanzaro
Comment 4 2017-02-07 08:46:04 PST
Comment on attachment 300806 [details] Patch Is it not possible to make a layout test for this? This is exactly the sort of regression I was worried could happen when we decided to backport on-demand accelerated compositing to 2.14. At least we caught it *barely* in time for 2.14.4, but it feels like luck that Jeremy decided to test 2.15.4 at just the right time. I know the status of accelerated compositing in 2.14 is a really exceptional situation and we probably ought to make the change in the stable branch anyway, but we need to avoid large stable branch changes like this in the future, especially so late in the cycle.
Carlos Garcia Campos
Comment 5 2017-02-07 09:00:40 PST
This is not because of on-demand Ac mode. Even when Ac mode forced, when the media player doesn't have a renderer, the condition will not be tru, because mediaPlayerRenderingCanBeAccelerated will return false.
Carlos Garcia Campos
Comment 6 2017-02-07 22:55:47 PST
Jeremy Bicha
Comment 7 2017-02-08 05:09:52 PST
Thanks. I confirm the patch fixes my issue.
Note You need to log in before you can comment on or make changes to this bug.