REGRESSION(r210740): [GTK] 2.15 broke embedded videos in GNOME's yelp app https://bugs.webkit.org/show_bug.cgi?id=167887

Reviewed by Michael Catanzaro.

Update the m_renderingCanBeAccelerated when accelerated rendering state changes.

* platform/graphics/gstreamer/MediaPlayerPrivateGStreamerBase.cpp:
(WebCore::MediaPlayerPrivateGStreamerBase::acceleratedRenderingStateChanged):
(WebCore::MediaPlayerPrivateGStreamerBase::createVideoSink):
* platform/graphics/gstreamer/MediaPlayerPrivateGStreamerBase.h:

Canonical link: https://commits.webkit.org/185002@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@211854 268f45cc-cd09-0410-ab3c-d52691b4dbfc